--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -28,4 +28,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ 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 }}
